--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 [[bin]]
 name = "day-1-2023"
 
+[[bin]]
+name = "day-2-2023"
+
+[[bin]]
+name = "day-3-2023"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
